Fixed a problem where the height of the grid was too big

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ button {
   flex-shrink: 0;
   justify-content: center; /* Centra el contenido horizontalmente dentro del contenedor */
   align-items: center; /* Centra el contenido verticalmente dentro del contenedor */
-  width: 45%; /* Define un ancho en porcentaje */
+  width: 40%; /* Define un ancho en porcentaje */
 }
 
 .square {
